tests/fixtures/invalid/bytes_bitxor_none.py
# Cannot bitwise XOR Bytes and None
x: bytes = b"hello" ^ None
